First working version of crashceptor.

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,6 +3,12 @@
 CFLAGS = -std=gnu99 -g -O2
 LDFLAGS =
 
+#LOG_DIR = /var/log/crashceptor
+#ORIG_BIN_DIR = /var/lib/crashceptor
+
+CPPDEFS = $(if $(LOG_DIR),-DLOG_DIR='"$(LOG_DIR)"') \
+          $(if $(ORIG_BIN_DIR),-DORIG_BIN_DIR='"$(ORIG_BIN_DIR)"')
+
 CC = gcc
 LD = gcc
 
@@ -19,7 +25,7 @@ crashceptor: crashceptor.o
 	$(LD) $(LDFLAGS) -o $@ $^
 
 %.o: %.c
-	$(CC) -c $(CFLAGS) $(filter %.c,$^)
+	$(CC) -c $(strip $(CFLAGS) $(CPPDEFS)) $(filter %.c,$^)
 
 #-----------------------------------------------------------------------------
 # vim:ft=make
